--- a/scss/_combos.scss
+++ b/scss/_combos.scss
@@ -27,24 +27,35 @@
     margin-bottom: 15px;
     .combos__1{
         grid-area: combo1;
+        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        
     }
     
     .combos__2{
         grid-area: combo2;
+        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
     }
     
     .combos__3{
         grid-area: combo3;
+        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
     }
     
     .combos__4{
         grid-area: combo4;
+        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
     }
     .combos__p{
         @extend .parrafos;
         background-color: #f5b528;
     }
-    .combos-imagen{
-        border: dashed 3px black;
-    }
+
 }
