--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -11,6 +11,12 @@
     padding: 3px;
     display: inline-block;
     margin-left: 160px;
+    position: relative;
+    top: 120px;
+    right: 20px;
+    box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+    -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+    -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
 }
 .contacto{
     display: flex;
@@ -28,6 +34,9 @@
             border-collapse: collapse;
             font-family: $letraPrincipal;
             font-size: 3rem;
+            box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+            -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+            -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
             th{
                 background-color: black;
                 padding: 20px 15px;
@@ -50,23 +59,27 @@
 form{
     background-color: white;
     padding: 10px;
-    width: 30%;
+    width: 40%;
     color: black;
     border: dashed 3px black;
     font-family: $letraPrincipal;
-    margin-bottom: 30px;    
+    margin-bottom: 30px;   
+    font-size: 1.8rem; 
+    box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+    -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+    -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
     ul{
         padding: 0px;
         li{
             list-style: none;
             padding: 1px;
-            input, textarea{
+            input, textarea, select{
                 width: 100%;
                 height: 80%;
             }
         }
         .boton{
-            width: 90px;
+            width: 100%;
             background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
             color: white;
             font-family: $letraPrincipal;
