--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,11 +45,10 @@
   background-color: #f5b528;
 }
 
-.imagen-principal {
+.caja .imagen-principal {
   width: 100%;
 }
-
-.horarios {
+.caja .horarios {
   display: grid;
   grid-template-columns: repeat(3, 0.5fr);
   grid-template-rows: repeat(3, 0.5fr);
@@ -57,7 +56,7 @@
   grid-gap: 10px;
   margin: 10px;
 }
-.horarios .horarios__1_img {
+.caja .horarios .horarios__1_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -65,7 +64,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__1;
 }
-.horarios .horarios__2_img {
+.caja .horarios .horarios__2_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -73,7 +72,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__2;
 }
-.horarios .horarios__3_img {
+.caja .horarios .horarios__3_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -81,7 +80,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__3;
 }
-.horarios .horarios__4_img {
+.caja .horarios .horarios__4_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -89,7 +88,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__4;
 }
-.horarios .horarios__5_img {
+.caja .horarios .horarios__5_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -97,7 +96,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__5;
 }
-.horarios .horarios__6_img {
+.caja .horarios .horarios__6_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -105,7 +104,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__6;
 }
-.horarios .horarios__7_img {
+.caja .horarios .horarios__7_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -113,7 +112,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__7;
 }
-.horarios .horarios__8_img {
+.caja .horarios .horarios__8_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -121,7 +120,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__8;
 }
-.horarios .horarios__9_img {
+.caja .horarios .horarios__9_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -129,10 +128,10 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__9;
 }
-.horarios .horarios__contenedor {
+.caja .horarios .horarios__contenedor {
   border: dashed 3px black;
 }
-.horarios .horarios__p {
+.caja .horarios .horarios__p {
   height: 20%;
   width: 100%;
   font-family: "Staatliches", cursive;
@@ -142,14 +141,14 @@
   margin-top: 3px;
   text-align: center;
 }
-.horarios .horarios__p .funciones {
+.caja .horarios .horarios__p .funciones {
   background-color: black;
   color: whitesmoke;
   border-radius: 3px;
   margin: 1px;
   padding: 0 4px;
 }
-.horarios .horarios__p .funciones:hover {
+.caja .horarios .horarios__p .funciones:hover {
   background-color: rgb(200, 24, 24);
 }
 
