--- a/scss/_horarios.scss
+++ b/scss/_horarios.scss
@@ -12,84 +12,84 @@
         -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
         -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
     }
-
-.imagen-principal{
-    width: 100%;
-}
-
-.horarios{
-    display: grid;
-    grid-template-columns: repeat(3, 0.5fr);
-    grid-template-rows: repeat(3, 0.5fr);
-    grid-template-areas: 
-    "horarios__1 horarios__2 horarios__3"
-    "horarios__4 horarios__5 horarios__6"
-    "horarios__7 horarios__8 horarios__9";
-    grid-gap: 10px;
-    margin: 10px;
-    .horarios__1_img{
-        @include cards;
-        grid-area: horarios__1;
-    }
-    .horarios__2_img{
-        @include cards;
-        grid-area: horarios__2;
-    }
-    
-    .horarios__3_img{
-        @include cards;
-        grid-area: horarios__3;
-    }
-    
-    .horarios__4_img{
-        @include cards;
-        grid-area: horarios__4;
-    }
-    
-    .horarios__5_img{
-        @include cards;
-        grid-area: horarios__5;
-    }
-    
-    .horarios__6_img{
-        @include cards;
-        grid-area: horarios__6;
-    }
-    
-    .horarios__7_img{
-        @include cards;
-        grid-area: horarios__7;
-    }
-    
-    .horarios__8_img{
-        @include cards;
-        grid-area: horarios__8;
-    }
-    
-    .horarios__9_img{
-        @include cards;
-        grid-area: horarios__9;
-    }
-    .horarios__contenedor{
-        border: dashed 3px black;
-    }
-    .horarios__p{
-        height: 20%;
+    .caja{
+    .imagen-principal{
         width: 100%;
-        font-family: $letraPrincipal;
-        font-size: 4rem;
-        padding: 3px;
-        display: inline-block;
-        margin-top: 3px;
-        text-align: center;
-        .funciones{
-            background-color: black;
-            color: whitesmoke;
-            border-radius: 3px;
-            margin: 1px;
-            padding: 0 4px;
-            &:hover{
-                background-color: $colorPrincipal;
+    }
+    .horarios{
+        display: grid;
+        grid-template-columns: repeat(3, 0.5fr);
+        grid-template-rows: repeat(3, 0.5fr);
+        grid-template-areas: 
+        "horarios__1 horarios__2 horarios__3"
+        "horarios__4 horarios__5 horarios__6"
+        "horarios__7 horarios__8 horarios__9";
+        grid-gap: 10px;
+        margin: 10px;
+        .horarios__1_img{
+            @include cards;
+            grid-area: horarios__1;
+        }
+        .horarios__2_img{
+            @include cards;
+            grid-area: horarios__2;
+        }
+        
+        .horarios__3_img{
+            @include cards;
+            grid-area: horarios__3;
+        }
+        
+        .horarios__4_img{
+            @include cards;
+            grid-area: horarios__4;
+        }
+        
+        .horarios__5_img{
+            @include cards;
+            grid-area: horarios__5;
+        }
+        
+        .horarios__6_img{
+            @include cards;
+            grid-area: horarios__6;
+        }
+        
+        .horarios__7_img{
+            @include cards;
+            grid-area: horarios__7;
+        }
+        
+        .horarios__8_img{
+            @include cards;
+            grid-area: horarios__8;
+        }
+        
+        .horarios__9_img{
+            @include cards;
+            grid-area: horarios__9;
+        }
+        .horarios__contenedor{
+            border: dashed 3px black;
+        }
+        .horarios__p{
+            height: 20%;
+            width: 100%;
+            font-family: $letraPrincipal;
+            font-size: 4rem;
+            padding: 3px;
+            display: inline-block;
+            margin-top: 3px;
+            text-align: center;
+            .funciones{
+                background-color: black;
+                color: whitesmoke;
+                border-radius: 3px;
+                margin: 1px;
+                padding: 0 4px;
+                &:hover{
+                    background-color: $colorPrincipal;
+                }
             }
         }
     }
