--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,10 +45,11 @@
   background-color: #f5b528;
 }
 
-.caja img {
+img {
   width: 100%;
 }
-.caja .horarios {
+
+.horarios {
   display: grid;
   grid-template-columns: repeat(3, 0.5fr);
   grid-template-rows: repeat(3, 0.5fr);
@@ -56,7 +57,7 @@
   grid-gap: 10px;
   margin: 10px;
 }
-.caja .horarios .horarios__1_img {
+.horarios .horarios__1_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -64,7 +65,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__1;
 }
-.caja .horarios .horarios__2_img {
+.horarios .horarios__2_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -72,7 +73,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__2;
 }
-.caja .horarios .horarios__3_img {
+.horarios .horarios__3_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -80,7 +81,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__3;
 }
-.caja .horarios .horarios__4_img {
+.horarios .horarios__4_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -88,7 +89,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__4;
 }
-.caja .horarios .horarios__5_img {
+.horarios .horarios__5_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -96,7 +97,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__5;
 }
-.caja .horarios .horarios__6_img {
+.horarios .horarios__6_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -104,7 +105,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__6;
 }
-.caja .horarios .horarios__7_img {
+.horarios .horarios__7_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -112,7 +113,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__7;
 }
-.caja .horarios .horarios__8_img {
+.horarios .horarios__8_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -120,7 +121,7 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__8;
 }
-.caja .horarios .horarios__9_img {
+.horarios .horarios__9_img {
   width: 100%;
   height: 80%;
   box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
@@ -128,10 +129,10 @@
   -moz-box-shadow: -2px 16px 41px -4px rgba(0, 0, 0, 0.72);
   grid-area: horarios__9;
 }
-.caja .horarios .horarios__contenedor {
+.horarios .horarios__contenedor {
   border: dashed 3px black;
 }
-.caja .horarios .horarios__p {
+.horarios .horarios__p {
   height: 20%;
   width: 100%;
   font-family: "Staatliches", cursive;
@@ -141,14 +142,14 @@
   margin-top: 3px;
   text-align: center;
 }
-.caja .horarios .horarios__p .funciones {
+.horarios .horarios__p .funciones {
   background-color: black;
   color: whitesmoke;
   border-radius: 3px;
   margin: 1px;
   padding: 0 4px;
 }
-.caja .horarios .horarios__p .funciones:hover {
+.horarios .horarios__p .funciones:hover {
   background-color: rgb(200, 24, 24);
 }
 
@@ -666,7 +667,7 @@ footer .redes img {
   .caja .contenedorTotal .video {
     display: none;
   }
-  .horarios {
+  .caja .horarios {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(5, 1fr);
     grid-template-areas: "horarios__1" "horarios__2" "horarios__3" "horarios__4" "horarios__5" "horarios__6" "horarios__7" "horarios__8" "horarios__9";
@@ -674,46 +675,46 @@ footer .redes img {
     align-items: center;
     align-content: center;
   }
-  .horarios .horarios__1_img {
+  .caja .horarios .horarios__1_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__2_img {
+  .caja .horarios .horarios__2_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__3_img {
+  .caja .horarios .horarios__3_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__4_img {
+  .caja .horarios .horarios__4_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__5_img {
+  .caja .horarios .horarios__5_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__6_img {
+  .caja .horarios .horarios__6_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__7_img {
+  .caja .horarios .horarios__7_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__8_img {
+  .caja .horarios .horarios__8_img {
     width: 100%;
     height: 70%;
   }
-  .horarios .horarios__9_img {
+  .caja .horarios .horarios__9_img {
     width: 100%;
     height: 70%;
   }
-  .h-100 {
+  .caja .h-100 {
     height: 300px !important;
   }
-  .combos {
+  .caja .combos {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
@@ -721,37 +722,37 @@ footer .redes img {
     justify-content: center;
     justify-items: center;
   }
-  .parrafo-consultas {
+  .caja .parrafo-consultas {
     display: none;
   }
-  .contacto {
+  .caja .contacto {
     justify-content: center;
   }
-  .contacto .consultas {
+  .caja .contacto .consultas {
     display: none;
   }
-  form {
+  .caja form {
     width: 100%;
     margin-right: 40px;
     margin-top: 50px;
   }
-  .precios-pagos p {
+  .caja .precios-pagos p {
     width: 33%;
     text-align: center;
   }
-  .tabla__precios {
+  .caja .tabla__precios {
     display: grid;
     text-align: center;
   }
-  .tabla__precios .medios {
+  .caja .tabla__precios .medios {
     margin: 0;
   }
-  .tabla__precios .medios table {
+  .caja .tabla__precios .medios table {
     width: 100%;
     font-size: 1.5rem;
     margin: 0px;
   }
-  .redes {
+  .caja .redes {
     display: none;
   }
 }
