--- a/scss/_combos.scss
+++ b/scss/_combos.scss
@@ -27,31 +27,31 @@
     margin-bottom: 15px;
     .combos__1{
         grid-area: combo1;
-        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        box-shadow: $boxShadow;
+        -webkit-box-shadow: $boxShadow;
+        -moz-box-shadow: $boxShadow;
         
     }
     
     .combos__2{
         grid-area: combo2;
-        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        box-shadow: $boxShadow;
+        -webkit-box-shadow: $boxShadow;
+        -moz-box-shadow: $boxShadow;
     }
     
     .combos__3{
         grid-area: combo3;
-        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        box-shadow: $boxShadow;
+        -webkit-box-shadow: $boxShadow;
+        -moz-box-shadow: $boxShadow;
     }
     
     .combos__4{
         grid-area: combo4;
-        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        box-shadow: $boxShadow;
+        -webkit-box-shadow: $boxShadow;
+        -moz-box-shadow: $boxShadow;
     }
     .combos__p{
         @extend .parrafos;
