--- a/scss/_horarios.scss
+++ b/scss/_horarios.scss
@@ -8,9 +8,9 @@
     @mixin cards{
         width: 100%;
         height: 80%;
-        box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-        -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+        box-shadow: $boxShadow;
+        -webkit-box-shadow: $boxShadow;
+        -moz-box-shadow: $boxShadow;
     }
         img{
             width: 100%;
