--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -119,9 +119,9 @@ body{
             height: 90%;
             margin-left: 3%;
             margin-top: 10%;
-            box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-            -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-            -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+            box-shadow: $boxShadow;
+            -webkit-box-shadow: $boxShadow;
+            -moz-box-shadow: $boxShadow;
         }
         .fondo{
             background-color: rgb(228, 227, 227);
@@ -208,13 +208,12 @@ body{
                 grid-area: video;
                 justify-self: center;
                 align-self: start;
-                box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-                -webkit-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
-                -moz-box-shadow: -2px 16px 41px -4px rgba(0,0,0,0.72);
+                box-shadow: $boxShadow;
+                -webkit-box-shadow: $boxShadow;
+                -moz-box-shadow: $boxShadow;
             }
         }
     }
-
 
     footer{
         background-image: url(../imagenes/fondo-negro.jpeg);
