--- a/css/estilos.css
+++ b/css/estilos.css
@@ -310,13 +310,16 @@ form ul li input, form ul li textarea, form ul li select, form ul li label {
   width: 100%;
   height: 80%;
 }
-form ul .boton {
+form ul label {
   width: 100%;
+}
+form ul label .boton {
   background-image: url(../imagenes/Copia\ de\ matrix.jpeg);
   color: white;
   font-family: "Staatliches", cursive;
   font-size: 2rem;
   padding: 10px;
+  width: 100%;
 }
 
 .h-100 {
